/cp 2013-05-22  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/57211
	* method.c (defaultable_fn_check): Avoid do_warn_unused_parameter
	warnings about defaulted functions.

/testsuite
2013-05-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57211
	* g++.dg/cpp0x/Wunused-parm.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@199189 138bc75d-0d04-0410-961f-82ee72b054a4